--- a/src/Carnet/CarBundle/Resources/config/routing.yml
+++ b/src/Carnet/CarBundle/Resources/config/routing.yml
@@ -32,6 +32,13 @@ carnet_car_delete:
     requirements:
         id: \d+
 
+carnet_vidange_view:
+    path:     /vidange{id}
+    defaults:
+        _controller: CarnetCarBundle:Vidange:view
+    requirements:
+        id: \d+
+
 carnet_vidange_add:
     path:     /car/{id_car}/vidange/add
     defaults:
