--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,10 @@
+carnet_user:
+    resource: "@CarnetUserBundle/Resources/config/routing.yml"
+    prefix:   /
+
 carnet_car:
     resource: "@CarnetCarBundle/Resources/config/routing.yml"
     prefix:   /carnet
+
+fos_user:
+    resource: "@FOSUserBundle/Resources/config/routing/all.xml"
